--- a/_layouts/parrot/_variables.scss
+++ b/_layouts/parrot/_variables.scss
@@ -34,7 +34,7 @@ $breaks: (
     margin: 72px,
   ),
   900: (
-    width: 924px,
+    width: 932px,
     gutter: 8px,
     margin: 88px
   )
